--- a/.github/workflows/publish_stable_image.yml
+++ b/.github/workflows/publish_stable_image.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           path: /tmp/.buildx-cache
           key: buildx-cache
+      # Login to ghcr.io
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: nexthatbot
+          password: ${{ secrets.BOT_TOKEN }}
       # Extract branch info
       - name: Set info
         run: |
